# mcp-poisoning-poc

./: CONTRIBUTING.md  DISCLOSURE.md  EXPORT_SUMMARY.md  LICENSE  README.md  SECURITY.md  agent_poc.py  fake_mcp_server.py  pyproject.toml  quickstart.sh  requirements-dev.txt  requirements.txt  setup.py
docs/: ATTACK_VECTORS.md  MITIGATION_STRATEGIES.md  PROOF_OF_CONCEPT.md  TECHNICAL_ANALYSIS.md  real_life_usage.md  threat_model.mmd  whitepaper.md
examples/: basic_attack_demo.py  defense_demo.py  full_simulation.py
